Simple command for running inner loop builds

--- a/src/ExampleExe/ExampleExe.csproj
+++ b/src/ExampleExe/ExampleExe.csproj
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Basic.Arm64.Build\Basic.Arm64.Build.csproj" >
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
+    <PackageReference Include="Basic.Arm64.Build" Version="0.0.0.1" />
   </ItemGroup>
-
-  <Import Project="..\Basic.Arm64.Build\bin\Debug\netstandard2.0\basic.targets" />
 
 </Project>
