Inner loop testing

--- a/src/Basic.Arm64.Build/Basic.Arm64.Build.csproj
+++ b/src/Basic.Arm64.Build/Basic.Arm64.Build.csproj
@@ -6,6 +6,8 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <IsPackable>true</IsPackable>
     <Description>MSBuild task that effectively multi-targets a .NET Framework exe to have an ARM64 specific output.</Description>
+    <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
+    <NoWarn>NU5100;NU5128</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
